# immortelle-cms

./: .gitattributes  .gitignore  README.md  default.nix  immortelle-cms.cabal  packages.nix  pkgs.nix  stack.yaml
app/: Main.hs
deploy/: network-production-impl.nix  network-production.nix  onprod  prod-create.sh  production.nixops
immortelle-cms-api/: immortelle-cms-api.cabal
immortelle-cms-api/src/Immortelle/CMS/: API.hs  Aeson.hs  Pagination.hs  Types.hs  VendorCode.hs
immortelle-cms-api/src/Immortelle/CMS/Types/: Author.hs  Category.hs  Color.hs  Incrustation.hs  Patination.hs  Price.hs  Product.hs  Stone.hs
immortelle-cms-api/src/Immortelle/CMS/Types/Author/: V1.hs
immortelle-cms-api/src/Immortelle/CMS/Types/Category/: V1.hs  V2.hs
immortelle-cms-api/src/Immortelle/CMS/Types/Color/: V1.hs  V2.hs
immortelle-cms-api/src/Immortelle/CMS/Types/Incrustation/: V1.hs  V2.hs
immortelle-cms-api/src/Immortelle/CMS/Types/Patination/: V1.hs
immortelle-cms-api/src/Immortelle/CMS/Types/Price/: V1.hs
immortelle-cms-api/src/Immortelle/CMS/Types/Product/: V1.hs  V2.hs
immortelle-cms-api/src/Immortelle/CMS/Types/Stone/: V1.hs
immortelle-cms-api/test/: Spec.hs
immortelle-cms-frontend/: build.sh  develop.sh  frontend.nix  immortelle-cms-frontend.cabal  incbuild.sh  overrides.nix
immortelle-cms-frontend/app/: Main.hs
immortelle-cms-frontend/src/Immortelle/CMS/: Frontend.hs
immortelle-cms-frontend/src/Immortelle/CMS/Frontend/: Auth.hs  Calendar.hs  Client.hs  Menu.hs  Monad.hs  Product.hs  Scroll.hs  Utils.hs
immortelle-cms-server/: .gitignore  config.yaml  immortelle-cms-server.cabal  password  service.nix
immortelle-cms-server/app/: Main.hs
immortelle-cms-server/src/Immortelle/: CMS.hs
immortelle-cms-server/src/Immortelle/CMS/: Config.hs  Monad.hs  Server.hs  State.hs
immortelle-cms-server/static/: bootstrap-material-datetimepicker.js  bundleloader.min.js  index.html
immortelle-cms-server/test/: Spec.hs
nixdeps/: reflex-material-bootstrap.nix  servant-auth-token-acid.nix  servant-auth.nix  servant-reflex.nix
src/Immortelle/: CMS.hs
src/Immortelle/CMS/: Types.hs  VendorCode.hs
test/: Spec.hs
