name:                immortelle-cms
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ncrashed/immortelle-cms#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2017 Anton Gushcha
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Immortelle.CMS
    Immortelle.CMS.Types
    Immortelle.CMS.VendorCode
  build-depends:
      base            >= 4.7  && < 5
    , acid-state      >= 0.14 && < 0.15
    , containers      >= 0.5  && < 0.6
    , megaparsec      >= 5.3  && < 5.4
    , safecopy        >= 0.9  && < 0.10
    , text            >= 1.2  && < 1.3
    , threepenny-gui  >= 0.8  && < 0.9
  default-language:    Haskell2010
  default-extensions:
    DeriveGeneric
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies

executable immortelle-cms
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , immortelle-cms
  default-language:    Haskell2010

test-suite immortelle-cms-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base
    , containers
    , immortelle-cms
    , QuickCheck
    , quickcheck-arbitrary-adt
    , smallcheck
    , smallcheck-series
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:
    FlexibleInstances
    MultiParamTypeClasses

source-repository head
  type:     git
  location: https://github.com/ncrashed/immortelle-cms
