name:                immortelle-cms-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ncrashed/immortelle-cms#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2017 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Immortelle.CMS.Aeson
    Immortelle.CMS.API
    Immortelle.CMS.Types
    Immortelle.CMS.VendorCode
  build-depends:
      base                >= 4.7    && < 5
    , acid-state          >= 0.14   && < 0.15
    , aeson               >= 0.11   && < 1.5
    , containers          >= 0.5    && < 0.6
    , http-api-data       >= 0.3    && < 0.4
    , megaparsec          >= 5.3    && < 5.4
    , mtl                 >= 2.2    && < 2.3
    , safecopy            >= 0.9    && < 0.10
    , servant             >= 0.11   && < 0.12
    , text                >= 1.2    && < 1.3
  default-language:    Haskell2010
  default-extensions:
    DataKinds
    DeriveGeneric
    FlexibleInstances
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

test-suite immortelle-cms-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base
    , containers
    , immortelle-cms-api
    , QuickCheck
    , quickcheck-arbitrary-adt
    , smallcheck
    , smallcheck-series
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
    , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:
    FlexibleInstances
    MultiParamTypeClasses
