name:                immortelle-cms-frontend
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ncrashed/immortelle-cms#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2017 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Immortelle.CMS.Frontend
  build-depends:
      base                >= 4.7    && < 5
    , immortelle-cms-api
    , reflex
    , reflex-dom
  default-language:    Haskell2010
  default-extensions:
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleInstances
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

executable immortelle-cms-frontend
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , immortelle-cms-api
    , immortelle-cms-frontend
    , reflex
    , reflex-dom
  default-language:    Haskell2010
  default-extensions:
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleInstances
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

source-repository head
  type:     git
  location: https://github.com/ncrashed/immortelle-cms
